improve landesindex teuerung feature and swagger doc
