# mietrecht_ch/mietrecht_ch/doctype/teuerung/api.py
@@ -7,7 +7,7 @@ from mietrecht_ch.models.resultTableDescription import ResultTableDescription
 from mietrecht_ch.models.resultTable import ResultTable
 from mietrecht_ch.models.teuerung import TeuerungInflationResult, TeuerungOldIndex, TeuerungNewIndex, FIELD_VALUE
 from mietrecht_ch.utils.queryExecutor import execute_query
-from mietrecht_ch.utils.dateUtils import buildFullDate, build_day_month_year_date
+from mietrecht_ch.utils.dateUtils import buildFullDate, buildDatesInChronologicalOrder, swapDateIfNeeded
 
 
 @frappe.whitelist(allow_guest=True)
@@ -53,51 +53,62 @@ def get_last_five_indexes():
 
 
 @frappe.whitelist(allow_guest=True)
-def get_inflation_for_period(basis: int, inflation_rate: float, fromMonth: int, fromYear: int, toMonth: int, toYear: int):
+def get_inflation_for_period(basis: int, inflationRate: float, fromMonth: int, fromYear: int, toMonth: int, toYear: int):
 
     old_date_formatted = buildFullDate(fromYear, fromMonth)
     new_date_formatted = buildFullDate(toYear, toMonth)
 
-    get_values_from_sql_query = __get_values_from_sql_query__(fromYear, toYear, basis, old_date_formatted, new_date_formatted)
+    values_from_sql_query = __get_values_from_sql_query__(
+        basis, old_date_formatted, new_date_formatted)
 
-    old_index_value = get_values_from_sql_query[0][FIELD_VALUE]
-    new_index_value = get_values_from_sql_query[1][FIELD_VALUE]
-
-    rounded_inflation = __round_inflation_number__(old_index_value, new_index_value, inflation_rate)
-
-    results = __result_of_all_data_gathered__(
-        fromYear, fromMonth, old_index_value, toYear, toMonth, new_index_value, rounded_inflation)
+    results = __compute_result__(inflationRate, old_date_formatted, new_date_formatted, values_from_sql_query)
 
     calculatorResult = CalculatorResult(results, None)
 
     return CalculatorMasterResult(
-        {'basis': basis, 'inflationRate': inflation_rate, 'fromMonth': fromMonth, 'fromYear': fromYear, 'toMonth': toMonth, 'toYear': toYear},
+        {'basis': basis, 'inflationRate': inflationRate, 'fromMonth': fromMonth,
+            'fromYear': fromYear, 'toMonth': toMonth, 'toYear': toYear},
         [calculatorResult]
     )
 
-def __get_values_from_sql_query__(fromYear, toYear, basis, old_date_formatted, new_date_formatted):
-    if fromYear < toYear:
-        sql = execute_query(
-            """select publish_date, base_year, value from tabTeuerung where base_year = '{basis}' and publish_date in ('{old_date_formatted}', '{new_date_formatted}') order by publish_date asc""".format(basis=basis, old_date_formatted=old_date_formatted, new_date_formatted=new_date_formatted))
-    else:
-        sql = execute_query(
-            """select publish_date, base_year, value from tabTeuerung where base_year = '{basis}' and publish_date in ('{old_date_formatted}', '{new_date_formatted}') order by publish_date desc""".format(basis=basis, old_date_formatted=old_date_formatted, new_date_formatted=new_date_formatted))
+def __compute_result__(inflationRate, old_date_formatted, new_date_formatted, values_from_sql_query):
+    results = None
+    if  values_from_sql_query and len(values_from_sql_query) == 2:
+        old_index_value = values_from_sql_query[0][FIELD_VALUE]
+        new_index_value = values_from_sql_query[1][FIELD_VALUE]
+
+        rounded_inflation = __round_inflation_number__(
+            old_index_value, new_index_value, inflationRate)
+
+        results = __result_of_all_data__(
+            old_date_formatted, old_index_value, new_date_formatted, new_index_value, rounded_inflation)
+            
+    return results
+
+
+def __get_values_from_sql_query__(basis, old_date_formatted, new_date_formatted):
+    order = 'asc' if old_date_formatted < new_date_formatted else 'desc'
+    sql = execute_query(
+        """select publish_date, base_year, value 
+            from tabTeuerung 
+            where base_year = '{basis}' and publish_date in ('{old_date_formatted}', '{new_date_formatted}') 
+            order by publish_date {order}"""
+        .format(basis=basis, old_date_formatted=old_date_formatted, new_date_formatted=new_date_formatted, order=order))
     return sql
 
 
-def __result_of_all_data_gathered__(fromYear, fromMonth, old_index_value, toYear, toMonth, new_index_value, rounded_inflation):
-    old_index = build_day_month_year_date(fromYear, fromMonth)
-    new_index = build_day_month_year_date(toYear, toMonth)
+def __result_of_all_data__(old_date_formatted, old_index_value, new_date_formatted, new_index_value, rounded_inflation):
     result = []
-    result.append(TeuerungInflationResult(TeuerungOldIndex(old_index, old_index_value),TeuerungNewIndex(new_index, new_index_value), rounded_inflation))
+    result.append(TeuerungInflationResult(TeuerungOldIndex(old_date_formatted, old_index_value),
+                  TeuerungNewIndex(new_date_formatted, new_index_value), rounded_inflation))
     return result
 
 
 def __round_inflation_number__(old_index_value, new_index_value, inflation):
-    number_not_rounder = (
-        (new_index_value - old_index_value) / old_index_value) * int(inflation)
-    number_rounder = round(number_not_rounder, 2)
-    return number_rounder
+    number_not_rounded = (new_index_value - old_index_value) / \
+        (old_index_value) * int(inflation)
+    number_rounded = round(number_not_rounded, 2)
+    return number_rounded
 
 
 def __create_unique_basis_from_indexes__(indexes, baseYearIntegers):
