# mietrecht_ch/public/html/mietrecht-ch-swagger.yaml
@@ -396,3 +396,54 @@ paths:
               schema:
                 type: object
                 $ref: '#components/schemas/APICalculatorResponse'
+  /api/method/mietrecht_ch.mietrecht_ch.doctype.teuerung.api.get_inflation_for_period:
+    get:
+      tags:
+        - LandesIndex
+      summary: Get inflation for specific period
+      parameters:
+        - name: basis
+          required: true
+          in: query
+          schema:
+            type: number
+          example: 2000      
+        - name: inflationRate
+          required: true
+          in: query
+          schema:
+            type: number
+          example: 85      
+        - name: fromMonth
+          required: true
+          in: query
+          schema:
+            type: number
+          example: 5     
+        - name: fromYear
+          required: true
+          in: query
+          schema:
+            type: number
+          example: 1993    
+        - name: toMonth
+          required: true
+          in: query
+          schema:
+            type: number
+          example: 6    
+        - name: toYear
+          required: true
+          in: query
+          schema:
+            type: number
+          example: 2015   
+      responses:
+        '200':
+          description: In a standardized `APICalculatorResponse`, the `result` property will contain the result complient to the schema `CalculatorResults`
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#components/schemas/APICalculatorResponse'
+
